samples/_failures_safe/1761529476_70a6c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2f8cd27.c: In function ‘main’:
./samples/SAFE/__tmp_c2f8cd27.c:129:16: error: expected ‘;’ at end of input
  129 |     read_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_c2f8cd27.c:129:5: error: expected declaration or statement at end of input
  129 |     read_matrix
      |     ^~~~~~~~~~~
